# pyquickbench

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  setup.py
.github/workflows/: cibuildwheels.yml  static.yml  unit_tests_on_diverse_os.yml
compare_app/: GUI.py  main.py
docs/: Makefile
docs/gh-pages/: _rediraffe_redirected.json  api.html  gallery.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html  sitemap.xml  tutorial.html  usage.html
docs/gh-pages/_build/auto_examples/: index.html  sg_execution_times.html
docs/gh-pages/_downloads/02cff99f6759e1c8cf9b17d8efb541e0/: 01-First_benchmark.py
docs/gh-pages/_downloads/0dc9ac5121cfb7a79da8cdd1143c030d/: 03-Preparing_inputs.ipynb
docs/gh-pages/_downloads/12c792ef708552efdcdc47201ba70d4e/: Inplace_conjugate.py
docs/gh-pages/_downloads/1b99250a1587f7dfd593274c39c58124/: 10-TimeTrains.ipynb
docs/gh-pages/_downloads/21dd89a1374b9bac271e1cfd7a9b5ca3/: 02-Caching_benchmarks.ipynb
docs/gh-pages/_downloads/233928fefb59783d5d4cd97039ccbe85/: numpy_array_init.py
docs/gh-pages/_downloads/27f40b64b4383c29a096d0d47c96ef21/: Sum.ipynb
docs/gh-pages/_downloads/33293900f3960ff8eaaf16966853b5ad/: 09-Vector_output.ipynb
docs/gh-pages/_downloads/332b56ac9f2cb5c3ca43146d92862c68/: 08-Lengthy_benchmarks.ipynb
docs/gh-pages/_downloads/3430d2b05d2d95feee728f0d9012814a/: 03-Preparing_inputs.py
docs/gh-pages/_downloads/42240e850d69a0f9c9a70fb344bcb6da/: Benchmark_Hardware_Info.py
docs/gh-pages/_downloads/48d5bc4621103c1c2c0c8ab5b5bd961f/: Benchmark_Hardware_Info.ipynb
docs/gh-pages/_downloads/4e1da5f914e5aeb27c5cc33ffdd374bf/: 09-Vector_output.py
docs/gh-pages/_downloads/4e5671b7fb9ddfd5d80c6f96f037869c/: 08-Lengthy_benchmarks.py
docs/gh-pages/_downloads/5c3f4305c6b87d399f1bb867d87a6930/: 06-Transforming_values.py
docs/gh-pages/_downloads/5f74441ac57ec12adced6864f0e745a1/: 06-Transforming_values.ipynb
docs/gh-pages/_downloads/78f9ecb19ffe699f47d8c91025f6ec49/: 04-Error_handling.py
docs/gh-pages/_downloads/7926905b110be880c112715885eafc0b/: 11-Manual_benchmarks.ipynb
docs/gh-pages/_downloads/855b64b906a1aa48825a31e15973572e/: 07-Multidimensional_benchmarks.ipynb
docs/gh-pages/_downloads/8ba4f1016763acdfcee0b4a679e32afa/: Inplace_conjugate.ipynb
docs/gh-pages/_downloads/969815e55da48900c26682f77a0939f8/: Sum.py
docs/gh-pages/_downloads/97197eb7f3b2c9bd8b059ad03647a061/: 11-Manual_benchmarks.py
docs/gh-pages/_downloads/a1429dbd1b6bf4bfbc0dd246317a1ae1/: 10-TimeTrains.py
docs/gh-pages/_downloads/a97bdd5149b0f6baa3efc4e0f298d86f/: 01-First_benchmark.ipynb
docs/gh-pages/_generated/: pyquickbench.TimeTrain.html  pyquickbench.TimeTrain.tictoc.html  pyquickbench.TimeTrain.to_dict.html  pyquickbench.TimeTrain.toc.html  pyquickbench.TimeTrain.total_time.html  pyquickbench.all_plot_intents.html  pyquickbench.all_reductions.html  pyquickbench.all_transforms.html  pyquickbench.default_ax_name.html  pyquickbench.default_color_list.html  pyquickbench.default_linestyle_list.html  pyquickbench.default_pointstyle_list.html  pyquickbench.fun_ax_name.html  pyquickbench.out_ax_name.html  pyquickbench.plot_benchmark.html  pyquickbench.repeat_ax_name.html  pyquickbench.run_benchmark.html
docs/gh-pages/_modules/: index.html
docs/gh-pages/_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
docs/gh-pages/html/: .buildinfo  api.html  genindex.html  index.html  search.html  searchindex.js
docs/gh-pages/test-report/: test-report.html
docs/source/: api.rst  conf.py  constants.rst  index.rst
docs/source/test-report/: test-report.rst
examples/: README.rst
examples/benchmarks/: Hashing.py  Inplace_conjugate.py  PYFFTW_bench.py  README.rst  Sum.py  numpy_array_init.py
examples/generated_files/: Caching_benchmarks_lin.npz  Caching_benchmarks_smaller.npz
examples/ongoing_work/: 05-Benchmark_variability.py  05-Formatting_plots.py  05-Plotting_scalars.py  07-Multidimensional_benchmarks.py  08-Multithreaded_benchmarks.py  12-Ranking results.py  Complex_1D_FFT.py  Matmul.py  Primes.py  Ranking results again.py  Sorting_Algorithms.py  Sum.py  Sum_vs_FFT.py  TimeTrain_test.py  argsort_np_vs_pqb.py  zeros_vs_empty.py
examples/scripts/: run_all_examples.py
examples/tutorial/: 01-First_benchmark.py  02-Caching_benchmarks.py  03-Preparing_inputs.py  04-Error_handling.py  05-Plotting_scalars.py  06-Transforming_values.py  07-Multidimensional_benchmarks.py  08-Lengthy_benchmarks.py  08-Multithreaded_benchmarks.py  08-Reductions.py  09-TimeTrains.py  09-Vector_output.py  10-TimeTrains.py  10-Vector output.py  10-Vector_output.py  11-Manual_benchmarks.py  11-TimeTrains.py  README.rst
gh-pages/: objects.inv  py-modindex.html  sg_execution_times.html  usage.html
gh-pages/_build/auto_examples/: index.html
gh-pages/_downloads/68d5b186bd443929dd2a50b747b68dba/: PYFFTW_bench.ipynb
gh-pages/_downloads/8ba4f1016763acdfcee0b4a679e32afa/: Inplace_conjugate.ipynb
gh-pages/_downloads/f2c0f79f41963fc26286838d80ad1795/: Benchmark Hardware Info.ipynb
gh-pages/_modules/: index.html
gh-pages/_sources/: usage.rst.txt
pyquickbench/: __init__.py  _benchmark.py  _defaults.py  _time_train.py  _utils.py  manual_rank_assign.py  rankstats.py  sort.py
pyquickbench/compare_app/: CLI.py  CLI.tcss  GUI.py  __init__.py  main.py  run.py
pyquickbench/cython/: __init__.py  rankstats.pyx  sinkhorn.pyx
requirements/: requirements-cibuildwheel-tests.txt  requirements-tests.txt  requirements.txt
scripts/: 01-First_benchmark.py  FFTW_wisdom.py  TimeTrain_test.py  ma_median_warning.py  question_stackoverflow.py  test_comb.py  test_concurrent.py  test_count_order.py  test_count_order_mul.py  test_input_dirs.py  test_montecarlo.py  test_names.py  test_ot_solver.py  test_ot_sort.py  tkinter_test.py
tests/: conftest.py  test_config.py  test_rankstats.py  test_simple.py  test_sort.py  test_utils.py
(+92 files in other folders)
